# flow-kit

./: .gitignore
falsprite/: .gitignore  README.md  package-lock.json  package.json  server.mjs  vercel.json
falsprite-desktop/: .gitignore  index.html  package-lock.json  package.json
falsprite-desktop/src/: main.js  styles.css
falsprite-desktop/src-tauri/: Cargo.toml  tauri.conf.json
falsprite-desktop/src-tauri/src/: api.rs  background_removal.rs  main.rs  settings.rs
falsprite/lib/: nano-banana.mjs
falsprite/public/: app.js  index.html  select.html  showcase.json
komfy_chrome_extension/: background.js  content.js  content_fetch_interceptor.js  content_isolated.js  content_main.js  flow-config.json  inject.js  popup.html  popup.js
komfy_chrome_extension/modules/: chatgpt-isolated.js  direct-generate.js  download.js  grok-video.js  image-gen.js  polling.js  polling.js.bak  project-manager.js  session.js  tab-manager.js  video-gen-frames.js  video-gen-poll.js  video-gen-settings.js  video-gen.js
nano-banana-bridge/: PLAN.md  README.md  api.html  background.js  flow-config.json  manifest.json
nano-banana-bridge/content/: content_isolated.js  content_main.js
nano-banana-bridge/modules/: api-server.js  image-gen.js  session.js
nano-banana-bridge/popup/: popup.html  popup.js
