[package]
name = "falsprite-desktop"
version = "2.0.0"
description = "Sprite sheet generator powered by Google Flow"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
anyhow = "1"
base64 = "0.22"
image = "0.25"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
